# hdc_mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: usage.md
docs/superpowers/plans/: 2026-03-15-hdc-mcp-implementation.md
docs/superpowers/specs/: 2026-03-15-hdc-mcp-design.md
src/hdc_mcp/: __init__.py  config.py  executor.py  server.py
src/hdc_mcp/tools/: __init__.py  _utils.py  app.py  device.py  file.py  forward.py  log.py  server_tools.py  shell.py
tests/: __init__.py  test_config.py  test_executor.py  test_server.py
tests/tools/: __init__.py  test_app.py  test_device.py  test_file.py  test_forward.py  test_log.py  test_server_tools.py  test_shell.py
