[project]
name = "hdc-mcp"
version = "0.1.0"
description = "MCP server for HarmonyOS hdc (HarmonyOS Device Connector) tool"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "hdc-mcp contributors", email = "hdc-mcp@users.noreply.github.com" }]
requires-python = ">=3.10"
dependencies = ["mcp[cli]"]
keywords = ["mcp", "hdc", "harmonyos", "openharmony", "devtools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Debuggers",
]

[project.scripts]
hdc-mcp = "hdc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hdc_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
